src/objects/Compliance_Review__c.object
<CustomObject>
    <fields>
        <fullName>CallHandling_Score_Convert_A1__c</fullName>
        <label>CallHandling Score Convert A1</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CallHandling_Score_Convert_A2__c</fullName>
        <label>CallHandling Score Convert A2</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call_Handling_Score__c</fullName>
        <formula>Rapport_Score__c +   Tone_Professional_Courtesy_Score__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Call Handling Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call_Quality_Score_Percentage__c</fullName>
        <formula>IF(Call_Quality_Total_Score__c  &lt;=  0, 0.00,(Call_Quality_Total_Score__c/ (  ALC_Possible_Score__c + Added_value_total_Possible_Points__c +  Sales_Call_Handling_Total_Possible_Score__c + Interaction_Total_Possible_Points__c)))</formula>
        <label>Percentage of Total Possible Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Call_Quality_Total_Score_OLD__c</fullName>
        <formula>Greeting_Score__c + Need_Analysis_Score__c + Product_Presentations_Knowledge_Score__c + Call_Handling_Score__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Call Quality (Total Score) OLD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call_Quality_Total_Score__c</fullName>
        <formula>Interaction_Score__c +  ALC_Score__c  +   Score_Added_Value_Behaviors__c + Sales_Call_Handling_Score__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Call Quality (Total Score)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call_Quality_Total__c</fullName>
        <formula>Opening_Score__c + Communication_Score__c + Handling_Score__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Call Quality Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call_Summary_Note__c</fullName>
        <label>Call Summary Note</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Call_Summary__c</fullName>
        <label>Call Summary</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Problem / Order Issue</fullName>
                </value>
                <value>
                    <fullName>Order Status</fullName>
                </value>
                <value>
                    <fullName>Cancellation / Refunds</fullName>
                </value>
                <value>
                    <fullName>Order Revision</fullName>
                </value>
                <value>
                    <fullName>Account Updates</fullName>
                </value>
                <value>
                    <fullName>Product Information</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_Transfers__c</fullName>
        <label>Call Transfers</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Coaching_Notes__c</fullName>
        <label>Coaching Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Communication_A1_Possible_Score__c</fullName>
        <defaultValue>20</defaultValue>
        <label>Communication A1 Possible Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Communication_A1_Score__c</fullName>
        <label>Communication A1 Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Communication_A1__c</fullName>
        <inlineHelpText>Did agent provide accurate information?</inlineHelpText>
        <label>Did agent provide accurate information</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Y(A)</fullName>
                </value>
                <value>
                    <fullName>Y(P)</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Communication_A2_Possible_Score__c</fullName>
        <defaultValue>30</defaultValue>
        <label>Communication A2 Possible Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Communication_A2_Score__c</fullName>
        <label>Communication A2 Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Communication_A2__c</fullName>
        <inlineHelpText>Did agent provide complete information?</inlineHelpText>
        <label>Did agent provide complete information</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Y(A)</fullName>
                </value>
                <value>
                    <fullName>Y(P)</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Communication_A3_Possible_Score__c</fullName>
        <defaultValue>20</defaultValue>
        <label>Communication A3 Possible Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Communication_A3_Score__c</fullName>
        <label>Communication A3 Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Communication_A3__c</fullName>
        <inlineHelpText>Did the agent verbalize how he/she can assist?</inlineHelpText>
        <label>Did agent verbalize how they can assist</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Communication_Score__c</fullName>
        <formula>Communication_A1_Score__c +  Communication_A2_Score__c +  Communication_A3_Score__c +  Communication_A4_Score__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Communication_Total_Possible_Points__c</fullName>
        <formula>Communication_A1_Possible_Score__c +  Communication_A2_Possible_Score__c +  Communication_A3_Possible_Score__c +  Communication_A4_Possible_Score__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Possible Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Compensation_Percentage_Number_OLD__c</fullName>
        <formula>Grand_Total_Number_OLD__c/Possible_Call_Quality_Violations__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Compensation Percentage (Number) OLD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Compensation_Percentage_Number__c</fullName>
        <formula>Grand_Total_Number__c/Possible_Call_Quality_Violations__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Compensation Percentage (Number)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Compensation_Percentage_OLD__c</fullName>
        <formula>IF (TEXT(Violation_A1__c) = &quot;Disqualified&quot;, &quot;0%&quot;, 
IF(TEXT(Violation_A2__c) = &quot;Disqualified&quot;, &quot;Disqualified&quot;,
IF (TEXT(Violation_A3__c) = &quot;No&quot; || TEXT(Violation_A4__c) = &quot;Yes&quot;, &quot;0%&quot;, TEXT(round(Compensation_Percentage_Number_OLD__c * 100,2)) &amp; &quot;%&quot; )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Compensation Percentage	OLD</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Compensation_Percentage__c</fullName>
        <formula>IF (TEXT( Violation_A2__c) = &quot;Disqualified&quot;, &quot;0%&quot;, 
IF (TEXT( Violation_A1__c )= &quot;Disqualified&quot;, &quot;0%&quot;,
IF (TEXT( Violation_A3__c) = &quot;No (1st Contact)&quot; || TEXT(Violation_A3__c) = &quot;No (2nd Contact)&quot;, &quot;0%&quot;, 
TEXT(round(Call_Quality_Score_Percentage__c* 100,2)) &amp; &quot;%&quot; )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Evaluation Percentage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corrective_Plan_Disclaimer_Text__c</fullName>
        <label>Corrective Plan Disclosure Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corrective_Plan_Discount_Text__c</fullName>
        <label>Corrective Plan Discount Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corrective_Plan_Discounts__c</fullName>
        <label>Corrective Plan Discounts</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Coaching</fullName>
                </value>
                <value>
                    <fullName>Verbal</fullName>
                </value>
                <value>
                    <fullName>1st Written</fullName>
                </value>
                <value>
                    <fullName>2nd Written</fullName>
                </value>
                <value>
                    <fullName>Termination</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Corrective_Plan_Fee__c</fullName>
        <label>Corrective Plan Fee</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Coaching</fullName>
                </value>
                <value>
                    <fullName>Verbal</fullName>
                </value>
                <value>
                    <fullName>1st Written</fullName>
                </value>
                <value>
                    <fullName>2nd Written</fullName>
                </value>
                <value>
                    <fullName>Termination</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Corrective_Plan_Outbound_Disclaimer__c</fullName>
        <label>Corrective Plan Outbound Disclosure</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1st Written</fullName>
                </value>
                <value>
                    <fullName>2nd Written</fullName>
                </value>
                <value>
                    <fullName>Termination</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Corrective_Plan_Security_Text__c</fullName>
        <label>Corrective Plan Security Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corrective_Plan_Security__c</fullName>
        <label>Corrective Plan Security</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Coaching</fullName>
                </value>
                <value>
                    <fullName>Verbal</fullName>
                </value>
                <value>
                    <fullName>1st Written</fullName>
                </value>
                <value>
                    <fullName>2nd Written</fullName>
                </value>
                <value>
                    <fullName>Termination</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Corrective_Plan_Service_Text__c</fullName>
        <label>Corrective Plan Service Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corrective_Plan_Service__c</fullName>
        <label>Corrective Plan Service</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Coaching</fullName>
                </value>
                <value>
                    <fullName>Verbal</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>1st Written</fullName>
                </value>
                <value>
                    <fullName>2nd Written</fullName>
                </value>
                <value>
                    <fullName>Termination</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Corrective_Plan_Start_Date__c</fullName>
        <label>Corrective Plan Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Corrective_Plan_Summary__c</fullName>
        <formula>IF( TEXT( CP_Unethical_Business_Practice__c)  &lt;&gt; &quot;&quot;, &quot;Improper Sales Practice: &quot; &amp; TEXT(CP_Unethical_Business_Practice__c) &amp; BR(),&quot;&quot;) &amp;

IF( TEXT( Corrective_Plan_Outbound_Disclaimer__c) &lt;&gt; &quot;&quot;, &quot;Initial Disclaimer: &quot; &amp; TEXT(Corrective_Plan_Outbound_Disclaimer__c) &amp; BR(),&quot;&quot;) &amp;

IF( TEXT( Cp_2nd_Contact_Disclaimer__c) &lt;&gt; &quot;&quot;, &quot;2nd Contact Disclaimer: &quot; &amp; TEXT(Cp_2nd_Contact_Disclaimer__c) &amp; BR(),&quot;&quot;)&amp;

IF( TEXT(Corrective_Plan_UPL__c) &lt;&gt; &quot;&quot;, &quot;UPL: &quot; &amp; TEXT(Corrective_Plan_UPL__c) &amp; BR(),&quot;&quot;) &amp;

IF( TEXT( Corrective_Plan_UPL_Coaching__c ) &lt;&gt; &quot;&quot;, &quot;UPL Coaching: &quot; &amp; TEXT(Corrective_Plan_UPL_Coaching__c) &amp; BR(),&quot;&quot;) &amp;

IF( TEXT(Corrective_Plan_Security__c) &lt;&gt; &quot;&quot;, &quot;Security: &quot; &amp; TEXT(Corrective_Plan_Security__c) &amp; BR(),&quot;&quot;) &amp;

IF( TEXT(Corrective_Plan_Fee__c) &lt;&gt; &quot;&quot;, &quot;Fee: &quot; &amp; TEXT(Corrective_Plan_Fee__c ) &amp; BR(),&quot;&quot;) &amp;

IF( TEXT( Corrective_Plan_Taxation__c ) &lt;&gt; &quot;&quot;, &quot;Taxation: &quot; &amp; TEXT(Corrective_Plan_Taxation__c ) &amp; BR(),&quot;&quot;) &amp;

IF( TEXT(CCS_Corrective_Plan_Disclaimer__c) &lt;&gt; &quot;&quot;, &quot;Initial Disclaimer: &quot; &amp; TEXT(CCS_Corrective_Plan_Disclaimer__c) &amp; BR(),&quot;&quot;) &amp;

IF( TEXT(CCS_Corrective_Plan_2nd_Disclaimer__c) &lt;&gt; &quot;&quot;, &quot;2nd Contact Disclaimer: &quot; &amp; TEXT(CCS_Corrective_Plan_2nd_Disclaimer__c) &amp; BR(),&quot;&quot;) &amp;


IF( TEXT(CCS_Corrective_Plan_UPL__c) &lt;&gt; &quot;&quot;, &quot;UPL: &quot; &amp; TEXT(CCS_Corrective_Plan_UPL__c) &amp; BR(),&quot;&quot;) &amp;

IF( TEXT(CCS_Corrective_Plan_UPL_Coaching__c) &lt;&gt; &quot;&quot;, &quot;UPL Coaching: &quot; &amp; TEXT(CCS_Corrective_Plan_UPL_Coaching__c) &amp; BR(),&quot;&quot;) &amp;

IF( TEXT(CCS_Corrective_Plan_Security__c) &lt;&gt; &quot;&quot;, &quot;Security: &quot; &amp; TEXT(CCS_Corrective_Plan_Security__c) &amp; BR(),&quot;&quot;) &amp;

IF( TEXT(CCS_Corrective_Plan_Taxation__c) &lt;&gt; &quot;&quot;, &quot;Taxation: &quot; &amp; TEXT(CCS_Corrective_Plan_Taxation__c) &amp; BR(),&quot;&quot;)</formula>
        <label>Corrective Plan Summary</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corrective_Plan_Taxation_Text__c</fullName>
        <label>Corrective Plan Taxation Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corrective_Plan_Taxation__c</fullName>
        <label>Corrective Plan Taxation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Coaching</fullName>
                </value>
                <value>
                    <fullName>Verbal</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>1st Written</fullName>
                </value>
                <value>
                    <fullName>2nd Written</fullName>
                </value>
                <value>
                    <fullName>Termination</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Corrective_Plan_UPL_Coaching_Text__c</fullName>
        <label>Corrective Plan UPL Coaching Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corrective_Plan_UPL_Coaching__c</fullName>
        <label>Corrective Plan UPL Coaching</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Coaching</fullName>
                </value>
                <value>
                    <fullName>Verbal</fullName>
                </value>
                <value>
                    <fullName>1st Written</fullName>
                </value>
                <value>
                    <fullName>2nd Written</fullName>
                </value>
                <value>
                    <fullName>Termination</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Corrective_Plan_UPL_Text__c</fullName>
        <label>Corrective Plan UPL Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corrective_Plan_UPL__c</fullName>
        <label>Corrective Plan UPL</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1st Written</fullName>
                </value>
                <value>
                    <fullName>2nd Written</fullName>
                </value>
                <value>
                    <fullName>Termination</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Corrective_Plan_Unethical_Text__c</fullName>
        <label>Corrective Plan Unethical Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Courteous__c</fullName>
        <label>Courteous?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Courteous_and_professional_tone__c</fullName>
        <label>Courteous and professional tone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cp_2nd_Contact_Disclaimer_Text__c</fullName>
        <label>Cp 2nd Contact Disclosure Text</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cp_2nd_Contact_Disclaimer__c</fullName>
        <label>Cp 2nd Contact Disclosure</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Coaching</fullName>
                </value>
                <value>
                    <fullName>Verbal</fullName>
                </value>
                <value>
                    <fullName>1st Written</fullName>
                </value>
                <value>
                    <fullName>2nd Written</fullName>
                </value>
                <value>
                    <fullName>Termination</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cross_Sell_Opportunities__c</fullName>
        <label>Cross Sell Opportunities</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Verification_Violation_Number__c</fullName>
        <formula>IF( Customer_Verification_Violation__c,1,IF( CCS_Security_Violation_Chk__c,1,0 ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Verification Issue Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Verification_Violation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Verification Issue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <formula>CreatedDate</formula>
        <label>Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Defined_Didnt_Omit_LZ_Services__c</fullName>
        <label>Defined/Didn&apos;t Omit LZ Services?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Function</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Divison__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Abandoner</fullName>
                </value>
                <value>
                    <fullName>RAcovery</fullName>
                </value>
                <value>
                    <fullName>Inbound RT</fullName>
                </value>
                <value>
                    <fullName>Inbound BIZ</fullName>
                </value>
                <value>
                    <fullName>Inbound IP</fullName>
                </value>
                <value>
                    <fullName>Inbound PSD</fullName>
                </value>
                <value>
                    <fullName>Outbound Biz</fullName>
                </value>
                <value>
                    <fullName>CC Biz</fullName>
                </value>
                <value>
                    <fullName>CC IP</fullName>
                </value>
                <value>
                    <fullName>CC PS</fullName>
                </value>
                <value>
                    <fullName>CC AS</fullName>
                </value>
                <value>
                    <fullName>CC General</fullName>
                </value>
                <value>
                    <fullName>Tier II</fullName>
                </value>
                <value>
                    <fullName>Escalations</fullName>
                </value>
                <value>
                    <fullName>Customer Care</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Did_Not_Overstate_LZ_Statistics__c</fullName>
        <label>Did Not Overstate LZ Statistics?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Did_Not_Provide_Unauthorized_Discounts__c</fullName>
        <label>Did Not Provide Unauthorized Discount(s)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Did_Not_Refuse_a_Refund__c</fullName>
        <label>Did Not Refuse a Refund?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Did_Not_Refuse_to_Cancel__c</fullName>
        <label>Did Not Refuse to Cancel?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Did_not_offer_a_refund_or_30_day_trial__c</fullName>
        <label>Did not offer a refund or 30 day trial?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Did_not_provide_advice_or_recommendation__c</fullName>
        <label>Did not provide advice or recommendation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Disclaimer_Violation_Number__c</fullName>
        <formula>IF( Disclaimer_Violation__c,1,IF( CCS_Disclaimer_Violation_Chk__c, 1,0 ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Disclosure Issue Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Disclaimer_Violation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disclosure Issue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disqualified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicate that agent would be disqualified for commission for the whole month</description>
        <label>Disqualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Divison__c</fullName>
        <label>Department</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>CCS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Evaluation_Number__c</fullName>
        <description>Displays Evaluation Percentage as a flat number.</description>
        <formula>IF (ISPICKVAL( Violation_A2__c, &quot;Disqualified&quot;), 0, 
IF (ISPICKVAL( Violation_A1__c, &quot;Disqualified&quot;), 0, 
IF (ISPICKVAL( Violation_A3__c, &quot;No (1st Contact)&quot;) || ISPICKVAL(Violation_A3__c, &quot;No (2nd Contact)&quot;), 0, 
(round(Call_Quality_Score_Percentage__c* 100,2)) )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Evaluation % Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Evalutation_Percentage__c</fullName>
        <formula>IF( ISPICKVAL(CCS_UPL_Violation__c,&quot;Disqualified&quot;) || ISPICKVAL(CCS_Disclaimer_Violation__c, &quot;No (1st Contact)&quot;)|| ISPICKVAL(CCS_Disclaimer_Violation__c, &quot;No (2nd Contact)&quot;), 0,  Percentage_of_Total_Possible__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Evalutation %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Evalutation_QA_Scorecard_1_0__c</fullName>
        <formula>IF( ISPICKVAL(CCS_UPL_Violation__c,&quot;Disqualified&quot;) || ISPICKVAL(CCS_Disclaimer_Violation__c, &quot;No&quot;)
|| ISPICKVAL( CCS_Security_Violation__c, &quot;No&quot;), 0, Percentage_of_Total_Possible__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QA Scorecard 1.0 - Evalutation %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Explain_how_LZ_can_assist__c</fullName>
        <label>Explain how LZ can assist</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Extended_Corrective_Plan_Start_Date__c</fullName>
        <label>Extended Corrective Plan Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Fantastic_Accuracy_of_info_LZ__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fantastic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fantastic_Call_Handling__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fantastic Call Handling</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fantastic_Communication__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fantastic Communication</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fantastic_Greeting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fantastic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fantastic_Identify1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fantastic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fantastic_Identify2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fantastic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fantastic_Initiate1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fantastic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fantastic_Initiate2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fantastic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fantastic_Listening__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fantastic Listening</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fantastic_Opening__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fantastic Opening</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fantastic_Rapport__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fantastic</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>